--- a/Proyecto/src/app/components/licores/licores.component.html
+++ b/Proyecto/src/app/components/licores/licores.component.html
@@ -1,19 +1,22 @@
 <header>
 <h1>Licores</h1>
 <hr>
-  
+<a [routerLink]="['/add-p']" class="btn btn-outline-danger btn-block">Regresar</a>
+<hr>
 </header>
 
 <body>
 <div class= "card-columns">
 
     <div class="card" *ngFor="let licor of licores; let i = index">
-
+     
+        
         <img class ="card-img-top img-fluid" [src]="licor.img" class="card-img-top" [alt]="licor.nombre">
         <div class="card-block">
           <h5 class="card-title">{{licor.nombre}}</h5>
           <p class="card-text">{{licor.bio}}</p>
           <p class="card-text">{{licor.venta}}</p>
+          <button (click)="onDelete(licor)">Eliminar</button>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 
           <a [routerLink]="['trago',i]"  class="btn btn-outline-primary btn-block">Ver mas...</a>
