--- a/Proyecto/src/app/components/trago/trago.component.html
+++ b/Proyecto/src/app/components/trago/trago.component.html
@@ -15,9 +15,9 @@
 <div class="col-md-8">
     <h3>{{trago.nombre}}</h3>
     <hr>
-    <p>{{trago.bio}}</p>
+    <p>{{trago.bio}}</p> 
     <hr>
-    <h2>{{trago.venta}}</h2>
+    <h2>{{trago.precio | currency}}</h2>
 
     
 </div>
