--- a/Proyecto/src/app/components/shared/navbar/navbar.component.html
+++ b/Proyecto/src/app/components/shared/navbar/navbar.component.html
@@ -10,22 +10,19 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <a class="navbar-brand" href="#">
-    <img src="assets/img/cervezas.png" width="30" height="30" alt="">
-  </a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
 
       <!-- active -->
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['home']">Home</a>
+        <a class="nav-link" [routerLink]="['home']">Inicio</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['licores']">Productos</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['about']">About</a>
+        <a class="nav-link" [routerLink]="['about']">Nosotros</a>
       </li>
     </ul>
 
