--- a/Proyecto/src/app/components/shared/navbar/navbar.component.html
+++ b/Proyecto/src/app/components/shared/navbar/navbar.component.html
@@ -5,6 +5,8 @@
 
 </header>
 
+<div [ngSwitch] = "tip()">
+
 <nav class="navbar navbar-expand-md navbar-dark bg-dark bg-faded">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -14,21 +16,70 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
 
+
+
+
+      <div *ngSwitchCase = "'usuario'">
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" > Bienvenido {{us.nombre}}</a>
+        </li>
+      </div>
+
+      <div *ngSwitchCase = "'admin'">
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" > Bienvenido {{us.nombre}}</a>
+        </li>
+      </div>
+
       <!-- active -->
+      <div *ngSwitchCase = "'invitado'">
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['log']">Iniciar Sesion</a>
+      </li>
+    </div>
+
+<div *ngSwitchCase = "'invitado'">
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['sesion']">Registrarse</a>
+      </li>
+    </div>
+
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['home']">Inicio</a>
       </li>
+
+
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['licores']">Productos</a>
       </li>
+
+
+    
+
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['about']">Nosotros</a>
       </li>
     </ul>
+    
 
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
       </form>
+
+      <div *ngSwitchCase = "'admin'">
+      <li class="nav-item" routerLinkActive="active">
+        <button (click)="Cerrar()" class="btn btn-outline-primary my-2 my-sm-0" type="submit">Cerrar Sesion</button>
+      </li>
+    </div>
+
+    <div *ngSwitchCase = "'usuario'">
+      <li class="nav-item" routerLinkActive="active">
+        <button (click)="Cerrar()" class="btn btn-outline-primary my-2 my-sm-0" type="submit">Cerrar Sesion</button>
+      </li>
+    </div>
+
+
     </div>
   </nav>
+</div>
