Reporte de ventas hecho (Falta ngSwitches y la parte estética)

--- a/Proyecto/src/app/components/home/home.component.html
+++ b/Proyecto/src/app/components/home/home.component.html
@@ -3,4 +3,7 @@
       <h1 class="display-3">DrinkFull</h1>
       <p class="lead">Esta es una aplicacion de venta de licores.</p>
     </div>
+    <div class="container">
+      <button [routerLink]='["/ReporteVentas"]' class="btn btn-outline-primary btn-block">Reporte de Ventas</button>
+    </div>
   </div>
