Para la segunda entrega la dejo bonita xd

--- a/Proyecto/src/app/components/home/home.component.html
+++ b/Proyecto/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 class="display-3">DrinkFull</h1>
-      <p class="lead">Esta es una aplicacion de venta de licores.</p>
+      <h1 class="display-1">La Esquina Digital</h1>
+      <p class="lead">El sitio donde encontraras todo lo que necesitas y lo que no necesitas tambien.</p>
     </div>
     <div class="container" [ngSwitch]="tip()">
       <div *ngSwitchCase = "true">
