--- a/Proyecto/src/app/components/licores/licores.component.html
+++ b/Proyecto/src/app/components/licores/licores.component.html
@@ -27,7 +27,7 @@
           <hr>
         </div>
         
-          <a [routerLink]="['trago',i]"  class="btn btn-outline-primary btn-block">Ver mas...</a>
+          <a [routerLink]="['item',i]"  class="btn btn-outline-primary btn-block">Ver mas...</a>
         
         
 
