--- a/Proyecto/src/app/components/shared/navbar/navbar.component.html
+++ b/Proyecto/src/app/components/shared/navbar/navbar.component.html
@@ -50,7 +50,7 @@
 
 
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['licores']">Productos</a>
+        <a class="nav-link" [routerLink]="['productos']">Productos</a>
       </li>
 
 
@@ -61,11 +61,6 @@
       </li>
     </ul>
     
-
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-      </form>
 
       <div *ngSwitchCase = "'admin'">
       <li class="nav-item" routerLinkActive="active">
