--- a/Proyecto/src/app/components/about/about.component.html
+++ b/Proyecto/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
     <h1>Sobre Nosotros</h1>
     <p>Somos una empresa que se dedica a la comercializacion de bienes y productos que le puedan interezar a le publico, tenemos especial interes en los intereses de lo que pueda interezar a los jovenes universitarios.</p>
 </div>
