--- a/Proyecto/src/app/components/sesion/sesion.component.html
+++ b/Proyecto/src/app/components/sesion/sesion.component.html
@@ -10,7 +10,13 @@
       <label for="formGroupExampleInput2">Apellido</label>
       <input type="text" class="form-control" name="apellido" placeholder="Tu Apellido" [(ngModel)]="apellido" >
     </div>
-    <div class="form-group">
+
+  
+      <div class="form-group">
+        <label for="formGroupExampleInput2">Fecha de nacimiento</label>
+        <input type="text" class="form-control" name="fecha" placeholder="Tu Fecha de nacimiento" [(ngModel)]="fecha" >
+      </div>
+      <div class="form-group">
         <label for="formGroupExampleInput2">Correo Electronico</label>
         <input type="email" class="form-control" name="email" placeholder="Email" [(ngModel)]="email">
       </div>
